--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
         
     </div>
-    <!-- <Footer>
+    <Footer>
         <div class="foot-panel1">
             Back to Top
         </div>
@@ -189,6 +189,6 @@
                 © 1996-2025, Amazon.com, Inc. or its affiliates
             </div>
         </div>
-    </Footer> -->
+    </Footer>
 </body>
 </html>
